css/map.css
body { 
  background: #eee;
  margin: 0;
  font-family: 'Helvetica Neue', Arial, Helvetica, sans-serif;
}

a {text-decoration: none;}
a:hover {text-decoration:underline;}

div#topbar { 
  position: fixed;
  height: 40px;
  top: 0;
  left: 0;
  right: 0;
  z-index:1000;
  background-color: #232323;
  background-image: linear-gradient(#4f4f4f, #232323);
  webkit-box-shadow: 2px 0 3px rgba(0,0,0,.25);
  box-shadow: 2px 0 3px rgba(0,0,0,.25);
}

div#topbar button:hover {
  webkit-box-shadow: 0 0 4px rgba(255,255,255,.7);
  box-shadow: 0 0 4px rgba(255,255,255,.7);
}

.search { 
  position: relative;
  float: left;
  margin: 0;
  padding: 0;
}

.search-input {
  position: relative;
  float: left;
  height: 20px;
  width: 200px;
  margin: 4px 0 4px 10px;
  padding: 4px;
  padding-right: 17px;
  border-radius: 3px;
  border: 1px solid #232323;
  webkit-box-shadow: 0 0 2px rgba(255,255,255,.25);
  box-shadow: 0 0 2px rgba(255,255,255,.25);
}

div#animControls {
    float:left;
    margin-top:2px;
    margin-left: 20px;
    //position: relative;
    //bottom:5px;
    //left:20px;
}

button#pause {
    margin-left: 10px;
}
    

span.iconClear{
  position:absolute;
  right:10px;    
  top: 10px;
  display:none;
  cursor:pointer;
  font: bold 1em sans-serif;
  color:#38468F;  
                                    }
                                    span.iconClear:hover{
                                        color:#f52;
                                      }


button#submit { 
  height: 30px;
  width: 30px;
}


div#submit-icon { 
  margin: 2px
}

div#social{
  float: right;
  margin-top:5px;
}

.settings {
  position: relative;
  float: right;
  margin: 0;
  margin-right: 10px;
  padding: 0;
}

#promo {
  position: relative;
  float: left;
  color:#fff;
  font-size: 22px;
  font-weight: bold;
  //padding-top:5px;
}

.settings-button {
  margin: 12px 0px 0px 0px;
  padding: 0;
  bottom: 0;
  //border: none!important;
  //border-radius: 3px;
  //border: 0px solid #232323;
  border: 0px solid #222;
  background-image: linear-gradient(#eee, #ccc 75%, #bbb);
  //webkit-box-shadow: 0 0 2px rgba(255,255,255,.25);
  //box-shadow: 0 0 2px rgba(255,255,255,.25);
}

* {
    outline: none;
}

.settings-button:hover {
    border: 0;
    outline: none;
}

button#gridSmall { 
  height: 20px;
  width: 20px;
}

button#gridMedium { 
  height: 25px;
  width: 25px;
}

button#gridLarge { 
  height: 30px;
  width: 30px;
}

div#mapview {
  position: fixed;
  //top: 247px;
  top: 40px;
  left: 400px;
  right: 0;
  bottom: 207px;
}

div#map {
  position: relative;
  height: 100%;
}

.label {
  color: white;
  background: black;
  opacity: 0.65;
  padding: 5px;
  border-radius: 3px;
  cursor: pointer;
  position: absolute;
  font-size: 12px;
}

.label-user {
  opacity: 0.9;
  font-weight: bold;
  background: #019ad2;
  border: 1px solid rgba(0,0,0,.3);
  text-shadow: 0 -1px 1px rgba(0,0,0,.25);
  webkit-box-shadow: 2px 2px 3px rgba(0,0,0,.25);
  box-shadow: 2px 2px 3px rgba(0,0,0,.25);
  background-image: linear-gradient(#33bcef,#019ad2)
}

div#control {
  position: absolute;
  //position: fixed;
  width: 400px;
  height: 100%;
  padding-top: 10px;
  top: 40px;
  //bottom: 207px;
  border-radius: 5px;
  webkit-box-shadow: 3px 0 3px rgba(0,0,0,.25);
  box-shadow: 3px 0 3px rgba(0,0,0,.25);
  background: #fff;
}

div#tweets { 
  //border-radius: 5px;
  border-top: 1px solid #888;
  border-bottom: 2px solid #888;
  margin-top: 10px;
  height: 67%;
  overflow-y: scroll;
  overflow-x: hidden;
}

div#cloud {
  margin-top: 0px;
  height: 23%;
}

div#sortPref {
  font-size: 12px;
  color: #555;
  margin: 0px;
  padding-left: 10px;
}

div#numTokensText {
  font-size: 12px;
  color: #555;
  margin: 0px;
  padding-left: 10px;
}

.link-visited {
  color: #777;
}

.tweet-container {
  list-style:none;
  padding: 5px 10px 5px 10px;
  border: 1px solid rgba(0,0,0,.1);
  border-bottom: 0;
  background-clip: padding-box;
  font-size: 12px;
  display: block;
}

.tweet-container:hover {
  border: 1px solid rgba(0,0,0,.3);
  background-image: linear-gradient(#fff, #eee 75%, #ccc)
}

.container-hover {
  border: 1px solid rgba(0,0,0,.3);
  background-image: linear-gradient(#fff, #eee 75%, #ccc)
}


.tweet-header {
  padding: 0 0 3px 0;
}

.tweet-profile {
  float: left;
  font-weight: bold;
  font-size: 12px;
  color: #333;
}

.tweet-time {
  margin-left: 60%;
  color: #777;
}

.tweet-content {
  margin: 0;
  color: #555;
}

.tweet-content > a { 
  color: #0084b4;
}

.tweet-popup { 
  color: #555;
  font-size: 12px;
}

.logo-image {
  width: 90px;
  height:40px;
}

.anim-input {
    //webkit-box-shadow: 0 0 2px rgba(50,50,50,.25);
    //box-shadow: 0 0 2px rgba(100,100,100,.25);
    position:relative;
    border: none!important;
    margin: 3px 8px 3px 3px;
    //border-radius: 3px;
    //-webkit-background-clip: padding;
    background-size: cover;
    //padding:5px;
}

.social-button {
    border: none!important;
    background-size: cover;
    padding:0px;
}


.play-icon {
    //border: none!important;
    background: url('../img/play_green.png') no-repeat center center;
    width:60px;
    height:30px;
}

.pause-icon {
    border: none!important;
    background: url('../img/pause_blue.png') no-repeat center center;
    width:60px;
    height:30px;
}
    
.stop-icon {
    //border: none!important;
    background: url('../img/stop_reallypink.png') no-repeat center center;
    width:60px;
    height:30px;
}

#twitter-icon {
    border: none!important;
    background: url('../img/twitter-logo.png') no-repeat center center;
    width:30px;
    height:30px;
}

#facebook-icon {
    border: none!important;
    background: url('../img/facebook-logo.png') no-repeat center center;
    width:30px;
    height:30px;
}



.pointButtonOffImg {
    border: none!important;
    width: 220px;
    height:29px;
    background: url('../img/points_trans_bw.png') no-repeat center center;
    opacity: 1.0;
}

.pointButtonOnImg {
    width: 220px;
    height:29px;
    background: url('../img/points_trans_color.png') no-repeat center center;
    opacity: 1.0;
}

.pointButtonHoverImg {
    width: 220px;
    height:29px;
    background: url('../img/points_trans_color.png') no-repeat center center;
    opacity: 1.0;
}

.heatButtonOffImg {
    width: 220px;
    height: 29px;
    background: url('../img/heatmap_trans_bw.png') no-repeat center center;
    opacity: 1.0;
}

.heatButtonOnImg {
    width: 220px;
    height: 29px;
    background: url('../img/heatmap_trans_color.png') no-repeat center center;
    opacity: 1.0;
}

.heatButtonHoverImg {
    width: 220px;
    height:29px;
    background: url('../img/heatmap_trans_color.png') no-repeat center center;
    opacity: 1.0;
}
.sprites { 
  width: 16px;
  height: 16px;
  background: url('../img/sprites.png') no-repeat center center;
  opacity: 0.5;
}

.sprites:hover { opacity: 0.8; }
.zoom75 { zoom: 0.75; }
.zoom125 { zoom: 1.25; }
.sprites.settings { background-position: -320px 0; }
.sprites.reset { background-position: -1248px 0; }
.sprites.search { background-position: -128px -32px; }
.sprites.trends { background-position: -256px -32px; }
.sprites.remove { background-position: -1504px 0; }
.sprites.grid { 
  background-position: -864px 0; 
  margin:0 auto; 
}

